--- a/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
@@ -305,7 +305,7 @@
                                                             else
                                                             {
                                                                 <center class="btn btn-xs btn-danger text-center d-block" style="padding-left: 7px; padding-right: 7px;" id="showToHideCancel_@item.ChequeRegisterId" title="Disabled">
-                                                                    Canceled
+                                                                    Cancel
                                                                 </center>
                                                             }
                                                         }
