--- a/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
+++ b/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
@@ -1,6 +1,6 @@
 ﻿@model KGERP.Service.ServiceModel.BillRequisitionBoqModel
 @{
-    ViewData["Title"] = "Bill of Quotation";
+    ViewData["Title"] = "Add BoQ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     KGERP.Service.ServiceModel.BillRequisitionBoqModel CacheData = TempData["CacheModel"] as KGERP.Service.ServiceModel.BillRequisitionBoqModel;
@@ -13,11 +13,11 @@
 </style>
 <section class="content-header">
     <h1>
-        Bill of Quotation
+        Bill of Quotations
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Bill of Quotation</li>
+        <li class="active">Add BoQ</li>
     </ol>
 </section>
 
@@ -42,7 +42,7 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="form-label">Select Project<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                <label class="form-label">Project<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                 @Html.DropDownListFor(model => model.ProjectId, new SelectList(Model.Projects.OrderBy(order => order.Name).OrderBy(order => order.Name), "CostCenterId", "Name"), "==Select Project==", new { id = "ddlProjectId", onchange = "getBoqDivisionList()", @class = "form-control searchingDropdown", style = "width:100%", required = "true" })
                                 @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
                             </div>
@@ -50,7 +50,7 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="form-label">Project Division<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                <label class="form-label">Division<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                 @Html.DropDownListFor(model => model.BoQDivisionId, new SelectList(Model.BoQDivisions.OrderBy(order => order.Name), "BoQDivisionId", "Name"), "==Select BoQ Division==", new { id = "ddlBoQDivisionId", @class = "form-control searchingDropdown", style = "width:100%", required = "true" })
                                 @Html.ValidationMessageFor(model => model.BoQDivisionId, "", new { @class = "text-danger" })
                             </div>
@@ -59,7 +59,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="form-label">BoQ Number<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                @Html.TextBoxFor(model => model.BoQNumber, new { id = "txtBoqItemNumber", @class = "form-control", @placeholder = "BoQ Item Number", required = "true" })
+                                @Html.TextBoxFor(model => model.BoQNumber, new { id = "txtBoqItemNumber", @class = "form-control", @placeholder = "Type BoQ item number", required = "true" })
                                 @Html.ValidationMessageFor(model => model.BoQNumber, "", new { id = "nameExist", @class = "text-danger" })
                                 <small class="text-danger" id="errorMessage"></small>
                             </div>
@@ -67,16 +67,16 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="form-label">BoQ Item Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                @Html.TextBoxFor(model => model.Name, new { id = "txtBoqItemName", @class = "form-control", @placeholder = "BoQ Item Name", required = "true" })
+                                <label class="form-label">BoQ Item<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                @Html.TextBoxFor(model => model.Name, new { id = "txtBoqItemName", @class = "form-control", @placeholder = "Type BoQ item name", required = "true" })
                                 @Html.ValidationMessageFor(model => model.Name, "", new { id = "nameExist", @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label class="form-label">Select BoQ Unit<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                @Html.DropDownListFor(model => model.BoqUnitId, new SelectList(Model.BoQUnits.Where(c => c.IsBoQUnit == true).OrderBy(order => order.Name), "UnitId", "Name"), "==Select BoQ Unit==", new { id = "ddlBoqUnitId", @class = "form-control searchingDropdown", @required = "true", style = "width:100%" })
+                                <label class="form-label">BoQ Unit<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                @Html.DropDownListFor(model => model.BoqUnitId, new SelectList(Model.BoQUnits.Where(c => c.IsBoQUnit == true).OrderBy(order => order.Name), "UnitId", "Name"), "==Select Unit==", new { id = "ddlBoqUnitId", @class = "form-control searchingDropdown", @required = "true", style = "width:100%" })
                                 @Html.ValidationMessageFor(model => model.BoqUnitId, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label class="form-label">Quantity<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                @Html.TextBoxFor(model => model.BoqQuantity, new { id = "txtBoqQuantity", @class = "form-control", @placeholder = "BoQ BoqQuantity", required = "true" })
+                                @Html.TextBoxFor(model => model.BoqQuantity, new { id = "txtBoqQuantity", @class = "form-control", @placeholder = "Type BoQ qunatity", required = "true" })
                                 @Html.ValidationMessageFor(model => model.BoqQuantity, "", new { id = "nameExist", @class = "text-danger" })
                             </div>
                         </div>
@@ -92,15 +92,15 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label class="form-label">Amount<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                @Html.TextBoxFor(model => model.Amount, new { id = "txtBoqAmount", @class = "form-control", @placeholder = "BoQ Amount", required = "true" })
+                                @Html.TextBoxFor(model => model.Amount, new { id = "txtBoqAmount", @class = "form-control", @placeholder = "Type BoQ amount", required = "true" })
                                 @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label asp-for="Description" class="form-control-label">BoQ Description/Notes</label>
-                                @Html.TextAreaFor(model => model.Description, new { id = "txtBoqDescription", @class = "form-control", @placeholder = "BoQ Description/Notes" })
+                                <label asp-for="Description" class="form-control-label">Notes</label>
+                                @Html.TextAreaFor(model => model.Description, new { id = "txtBoqDescription", @class = "form-control", @placeholder = "Type notes / remarks" })
                                 @Html.ValidationMessageFor(model => model.Description, "", new { id = "nameExist", @class = "text-danger" })
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <div class="col-md-6">
-                                    <input type="button" onclick="resetForm()" value="Reset Form" class="btn btn-secondary" data-dismiss="modal" style="width:100% !important"/>
+                                    <input type="button" onclick="resetForm()" value="Reset Form" class="btn btn-secondary" data-dismiss="modal" style="width:100% !important" />
                                 </div>
                                 <div class="col-md-6">
                                     <button type="submit" id="btnSave" class="btn btn-primary btn-block" style="width:100% !important"><i class='fa fa-edit'></i> Add</button>
