--- a/KGERP/Views/BillRequisition/BoqDivision.cshtml
+++ b/KGERP/Views/BillRequisition/BoqDivision.cshtml
@@ -1,6 +1,6 @@
 ﻿@model KGERP.Service.ServiceModel.BoqDivisionModel
 @{
-    ViewData["Title"] = "BoQ Division/Category";
+    ViewData["Title"] = "Add Division";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,11 +11,11 @@
 </style>
 <section class="content-header">
     <h1>
-        BoQ Division
+        BoQ Divisions
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">BoQ Division</li>
+        <li class="active">Add Division</li>
     </ol>
 </section>
 
@@ -36,14 +36,14 @@
                                 @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
 
                                 <div class="form-group">
-                                    <label>Select Project : </label>
-                                    @Html.DropDownListFor(model => model.ProjectId, new SelectList(Model.Projects.OrderBy(order => order.Name), "CostCenterId", "Name"), "=== Select Project ===", new { id = "ddProjectId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                    <label>Project<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.DropDownListFor(model => model.ProjectId, new SelectList(Model.Projects.OrderBy(order => order.Name), "CostCenterId", "Name"), "==Select Project==", new { id = "ddProjectId", @class = "form-control searchingDropdown", style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
                                 </div>
 
                                 <div class="form-group">
-                                    <label asp-for="Name" class="form-control-label">BoQ Division Name : </label>
-                                    @Html.TextBoxFor(model => model.Name, new { id = "txtBoqDivisionName", @class = "form-control", @placeholder = "Boq Division Name", required = "true" })
+                                    <label asp-for="Name" class="form-control-label">BoQ Division<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextBoxFor(model => model.Name, new { id = "txtBoqDivisionName", @class = "form-control", @placeholder = "Type BoQ division name", required = "true" })
                                     @Html.ValidationMessageFor(model => model.Name, "", new { id = "nameExist", @class = "text-danger" })
                                 </div>
 
@@ -74,8 +74,8 @@
                                         <thead>
                                             <tr>
                                                 <th>SL</th>
-                                                <th>BoQ Division Name</th>
                                                 <th>Project Name</th>
+                                                <th>BoQ Division</th>
                                                 <th>Action</th>
                                             </tr>
                                         </thead>
@@ -89,8 +89,8 @@
                                                             @(++sl)
                                                             <input type="hidden" id="ddProjectId_@item.BoqDivisionId" name="ProjectId" value="@item.ProjectId" />
                                                         </td>
-                                                        <td id=" tdBoqDivisionName_@item.BoqDivisionId">@item.Name</td>
                                                         <td id=" tdBoqProjectname_@item.BoqDivisionId">@item.ProjectName</td>
+                                                        <td id=" tdBoqDivisionName_@item.BoqDivisionId">@item.Name</td>
                                                         <td>
                                                             <a id="@item.BoqDivisionId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
@@ -153,7 +153,7 @@
 @section scripts {
     <script type="text/javascript">
         $(document).ready(function () {
-            
+
         });
 
         function makeEditble(elem) {
