--- a/KGERP/Views/Configuration/AccountingCostCenter.cshtml
+++ b/KGERP/Views/Configuration/AccountingCostCenter.cshtml
@@ -1,6 +1,6 @@
 ﻿@model KGERP.Service.Implementation.Configuration.VMUserMenu
 @{
-    ViewData["Title"] = "New Project";
+    ViewData["Title"] = "Add Project";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -25,12 +25,12 @@
 
 <section class="content-header">
     <h1>
-        New Project
+        Projects
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
 
-        <li class="active">New Project</li>
+        <li class="active">Add Project</li>
     </ol>
 </section>
 @using (Html.BeginForm("AccountingCostCenter", "Configuration", FormMethod.Post, new { id = "userMenuFormId", @class = "formValidator", onreset = "resetDDL();" }))
@@ -50,26 +50,26 @@
 
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label class="form-label">Project Type<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                    @Html.DropDownListFor(model => model.accounting_CostCenterTypeId, new SelectList(Model.accounting_CostCenterTypes.OrderBy(order => order.Name), "CostCenterTypeId", "Name"), "==Select Project Type==", new { id = "ddlProjectType", @class = "form-control searchingDropdown", @style = "width: 100%", @required = "true" })
+                                    <label class="form-label">Project Category<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.DropDownListFor(model => model.accounting_CostCenterTypeId, new SelectList(Model.accounting_CostCenterTypes.OrderBy(order => order.Name), "CostCenterTypeId", "Name"), "==Select Category==", new { id = "ddlProjectType", @class = "form-control searchingDropdown", @style = "width: 100%", @required = "true" })
                                     @Html.ValidationMessageFor(model => model.accounting_CostCenterTypeId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label class="form-label">Short Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                    @Html.TextBoxFor(model => model.ShortName, new { id = "txtShortName", @class = "form-control", @placeholder = "Short Name", @style = "width: 100%", @required = "true" })
-                                    @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
-                                    <small class="text-danger" id="errorMessage"></small>
+                                    <label class="form-label">Project Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextBoxFor(model => model.Name, new { id = "txtMenuName", @class = "form-control", @placeholder = "Type project full name", @style = "width: 100%", @required = "true" })
+                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label class="form-label">Project Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                    @Html.TextBoxFor(model => model.Name, new { id = "txtMenuName", @class = "form-control", @placeholder = "Project Name", @style = "width: 100%", @required = "true" })
-                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                    <label class="form-label">Short Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextBoxFor(model => model.ShortName, new { id = "txtShortName", @class = "form-control", @placeholder = "Type project short name", @style = "width: 100%", @required = "true" })
+                                    @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
+                                    <small class="text-danger" id="errorMessage"></small>
                                 </div>
                             </div>
 
@@ -91,8 +91,8 @@
 
                             <div class="col-md-3">
                                 <div class="form-group">
-                                    <label class="form-label">Total Amount<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                    @Html.TextBoxFor(model => model.TotalAmount, new { id = "txtAmount", @class = "form-control", @placeholder = "Amount", @style = "width: 100%", @required = "true" })
+                                    <label class="form-label">Project Value<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextBoxFor(model => model.TotalAmount, new { id = "txtAmount", @class = "form-control", @placeholder = "Type project value", @style = "width: 100%", @required = "true" })
                                     @Html.ValidationMessageFor(model => model.TotalAmount, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -100,7 +100,7 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <label class="form-label">Currency<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                    @Html.TextBoxFor(model => model.Currency, new { id = "txtCurrency", @class = "form-control", @placeholder = "Amount", @style = "width: 100%", @required = "true" })
+                                    @Html.TextBoxFor(model => model.Currency, new { id = "txtCurrency", @class = "form-control", @placeholder = "Type currency", @style = "width: 100%", @required = "true", @Value = "BDT" })
                                     @Html.ValidationMessageFor(model => model.Currency, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label class="form-label">Location<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                    @Html.TextAreaFor(model => model.ProjectLocation, new { id = "txtLocation", @class = "form-control", @placeholder = "Type project location here", @style = "width: 100%", @required = "true" })
+                                    @Html.TextAreaFor(model => model.ProjectLocation, new { id = "txtLocation", @class = "form-control", @placeholder = "Type project location", @style = "width: 100%", @required = "true" })
                                     @Html.ValidationMessageFor(model => model.ProjectLocation, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -132,17 +132,17 @@
                         <!-- /.box-header -->
                         <div class="box-body">
 
-                            <div class="table-responsive col-md-12">
+                            <div class="col-md-12">
                                 <table id="KgErpDataTable" class="table table-striped">
                                     <thead>
                                         <tr>
                                             <th>SL</th>
-                                            <th>Type</th>
-                                            <th>Name</th>
-                                            <th>Amount</th>
+                                            <th>Category</th>
+                                            <th style="width: 200px">Name</th>
+                                            <th style="width: 170px">Date</th>
+                                            <th>Value</th>
                                             <th>Currency</th>
-                                            <th>Project Date</th>
-                                            <th>Location</th>
+                                            <th style="width: 200px">Location</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
@@ -153,41 +153,35 @@
                                                 int sl = 0;
                                                 foreach (var item in Model.DataList.OrderBy(order => order.CostCenterTypeName))
                                                 {
-                                                                                <tr>
-                                                                                    <td>
-                                                                                        @(++sl)
-                                                                                        <input type="hidden" id="hidCompanyFK_@item.ID" value="@item.CompanyFK" />
-                                                                                        <input type="hidden" id="costCenterTypeId_@item.ID" value="@item.accounting_CostCenterTypeId" />
-                                                                                        <input type="hidden" id="shortName_@item.ID" value="@item.ShortName" />
-                                                                                        <input type="hidden" id="costCenterName_@item.ID" value="@item.ShortName" />
-                                                                                        <input type="hidden" id="startDate_@item.ID" value="@item.StartDate.ToString("dd/MM/yyy")" />
-                                                                                        <input type="hidden" id="endDate_@item.ID" value="@item.EndDate.ToString("dd/MM/yyyy")" />
-                                                                                        <input type="hidden" id="totalAmount_@item.ID" value="@item.TotalAmount" />
-                                                                                        <input type="hidden" id="currency_@item.ID" value="@item.Currency" />
-                                                                                        <input type="hidden" id="location_@item.ID" value="@item.ProjectLocation" />
-                                                                                    </td>
+                                                    <tr>
+                                                        <td>
+                                                            @(++sl)
+                                                            <input type="hidden" id="hidCompanyFK_@item.ID" value="@item.CompanyFK" />
+                                                            <input type="hidden" id="costCenterTypeId_@item.ID" value="@item.accounting_CostCenterTypeId" />
+                                                            <input type="hidden" id="shortName_@item.ID" value="@item.ShortName" />
+                                                            <input type="hidden" id="costCenterName_@item.ID" value="@item.ShortName" />
+                                                            <input type="hidden" id="startDate_@item.ID" value="@item.StartDate.ToString("dd/MM/yyy")" />
+                                                            <input type="hidden" id="endDate_@item.ID" value="@item.EndDate.ToString("dd/MM/yyyy")" />
+                                                            <input type="hidden" id="totalAmount_@item.ID" value="@item.TotalAmount" />
+                                                            <input type="hidden" id="currency_@item.ID" value="@item.Currency" />
+                                                            <input type="hidden" id="location_@item.ID" value="@item.ProjectLocation" />
+                                                        </td>
 
-                                                                                    <td>
-                                                                                        @item.CostCenterTypeName
-                                                                                    </td>
+                                                        <td>@item.CostCenterTypeName</td>
+                                                        <td>[@item.ShortName] - @item.Name</td>
+                                                        <td>@item.StartDate.ToString("dd/MM/yyyy") - @item.EndDate.ToString("dd/MM/yyyy")</td>
+                                                        <td>@item.TotalAmount</td>
+                                                        <td>@item.Currency</td>
+                                                        <td>@item.ProjectLocation</td>
 
-                                                                                    <td>
-                                                                                        [@item.ShortName] - @item.Name
-                                                                                    </td>
-
-                                                                                    <td>@item.TotalAmount</td>
-                                                                                    <td>@item.Currency</td>
-                                                                                    <td>@item.StartDate.ToString("dd/MM/yyyy") - @item.EndDate.ToString("dd/MM/yyyy")</td>
-                                                                                    <td>@item.ProjectLocation</td>
-
-                                                                                    <td>
-                                                                                        <a id="@item.ID" onclick=" makeEditble(this);" class="linkPointer" data-toggle="modal" data-target="#exampleModal" title="Edit" data-placement="top"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                                                                                        <a id="@item.ID" onclick="makeDeletable(@item.ID);" class="linkPointer" data-toggle="modal" data-target="#itemActionModal" title="Delete"
-                                                                                           data-placement="top">
-                                                                                            <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                                                                        </a>
-                                                                                    </td>
-                                                                                </tr>
+                                                        <td>
+                                                            <a id="@item.ID" onclick=" makeEditble(this);" class="linkPointer" data-toggle="modal" data-target="#exampleModal" title="Edit" data-placement="top"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                                                            <a id="@item.ID" onclick="makeDeletable(@item.ID);" class="linkPointer" data-toggle="modal" data-target="#itemActionModal" title="Delete"
+                                                               data-placement="top">
+                                                                <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
+                                                            </a>
+                                                        </td>
+                                                    </tr>
                                                 }
                                             }
                                         }
@@ -236,7 +230,7 @@
         $(document).ready(function () {
             "use strict"
 
-            
+
 
             $('.datepicker').datepicker({
                 dateFormat: "dd/mm/yy",
