--- a/KGERP/Views/Configuration/CommonRawProduct.cshtml
+++ b/KGERP/Views/Configuration/CommonRawProduct.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KGERP.Service.Implementation.Configuration.VMCommonProduct
 @using KG.Core.Services
 @{
-    ViewData["Title"] = "Requisition Materials";
+    ViewData["Title"] = "Add Materials / Items";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -14,11 +14,11 @@
 
 <section class="content-header">
     <h1>
-        Requisition Materials
+        Materials / Items
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Requisition Materials</li>
+        <li class="active">Add Materials / Items</li>
     </ol>
 </section>
 
@@ -43,32 +43,32 @@
 
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label for="message-text" class="col-form-label">Material Type :</label>
-                                        @Html.DropDownListFor(model => model.Common_ProductCategoryFk, Model.ProductCategoryList as SelectList, "==Select Requisition Type==", new { id = "ddlCommonProductCategoryFk", onchange= "GetSubCategoryListByCategoryId()", @class = "form-control", required = "required" })
+                                        <label for="message-text" class="col-form-label">Material Category<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                        @Html.DropDownListFor(model => model.Common_ProductCategoryFk, Model.ProductCategoryList as SelectList, "==Select Category==", new { id = "ddlCommonProductCategoryFk", onchange = "GetSubCategoryListByCategoryId()", @class = "form-control searchingDropdown", required = "required" })
                                         @Html.ValidationMessageFor(model => model.ProductCategoryId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label for="message-text" class="col-form-label">Material Subtype :</label>
-                                        @Html.DropDownListFor(model => model.Common_ProductSubCategoryFk, Model.ProductSubCategoryList as SelectList, "=Select Requisition Subtype=", new { id = "ddlCommonProductSubCategoryFk", @class = "form-control", required = "required" })
+                                        <label for="message-text" class="col-form-label">Material Subcategory<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                        @Html.DropDownListFor(model => model.Common_ProductSubCategoryFk, Model.ProductSubCategoryList as SelectList, "=Select Subcategory=", new { id = "ddlCommonProductSubCategoryFk", @class = "form-control searchingDropdown", required = "required" })
                                         @Html.ValidationMessageFor(model => model.ProductSubCategoryId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label for="message-text" class="col-form-label">Material Name :</label>
-                                        @Html.TextBoxFor(model => model.Name, new { id = "txtProductName", @class = "form-control", @placeholder = "Materials Name", required = "required" })
+                                        <label for="message-text" class="col-form-label">Material Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                        @Html.TextBoxFor(model => model.Name, new { id = "txtProductName", @class = "form-control", @placeholder = "Type material name", required = "required" })
                                         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label for="message-text" class="col-form-label">Select Unit :</label>
-                                        @Html.DropDownListFor(model => model.Common_UnitFk, Model.UnitList as SelectList, "===Select Unit===", new { id = "ddlCommonUnitFk", @class = "form-control", required = "required" })
+                                        <label for="message-text" class="col-form-label">Select Unit<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                        @Html.DropDownListFor(model => model.Common_UnitFk, Model.UnitList as SelectList, "===Select Unit===", new { id = "ddlCommonUnitFk", @class = "form-control searchingDropdown", required = "required" })
                                         @Html.ValidationMessageFor(model => model.Common_UnitFk, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -194,7 +194,7 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-            
+
         });
 
         function makeEditble(id) {
