--- a/KGERP/Views/Report/ProjectInfoReport.cshtml
+++ b/KGERP/Views/Report/ProjectInfoReport.cshtml
@@ -1,5 +1,8 @@
 ﻿@model KGERP.Data.CustomModel.ReportCustomModel
-
+@{
+    ViewData["Title"] = "Project Management Report";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <style type="text/css">
 
@@ -9,7 +12,7 @@
 </style>
 <section class="content-header">
     <h1>
-        Project Management Report <span style="color:indianred"> @Model.CompanyName</span>
+        Project Management Report
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
@@ -25,7 +28,6 @@
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="box-danger">
-
                         <!-- /.box-header -->
                         <div class="box-body">
                             @Html.AntiForgeryToken()
@@ -33,41 +35,41 @@
                             @Html.HiddenFor(model => model.ReportName)
 
                             <div class="row">
-                                <div class="col-md-3">
+                                <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">Project Type<sup class="text-danger" title="Required">*</sup></label>
-                                        @Html.DropDownListFor(model => model.ProjectTypeId, Model.ProjectTypeList as SelectList, "==Select Project Type==", new { id = "projectTypeId", onchange = "GetProjectListByProjectTypeId()", @class = "form-control searchingDropdown", required = "required" })
+                                        <label class="form-label">Project Category<sup class="text-danger" title="Required">*</sup></label>
+                                        @Html.DropDownListFor(model => model.ProjectTypeId, Model.ProjectTypeList as SelectList, "==Select Category==", new { id = "projectTypeId", onchange = "GetProjectListByProjectTypeId()", @class = "form-control searchingDropdown", required = "required" })
                                         @Html.ValidationMessageFor(model => model.ProjectTypeId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
-                                <div class="col-md-3">
+                                <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">Select Project<sup class="text-danger" title="Required">*</sup></label>
+                                        <label class="form-label">Project<sup class="text-danger" title="Required">*</sup></label>
                                         @Html.DropDownListFor(model => model.CostCenterId, new SelectList(Enumerable.Empty<SelectListItem>()), "==Select Project==", new { id = "ddlCostCenterId", @class = "form-control searchingDropdown", style = "width:100%", required = "requried" })
                                         @Html.ValidationMessageFor(model => model.CostCenterId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
-                            </div>
 
+                                <div class="col-md-4">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <select class="form-control" name="ReportType" id="ReportType" style="margin-top:24px; width: 100%">
+                                                <option value="PDF">PDF</option>
+                                                <option value="EXCEL">EXCEL</option>
+                                                <option value="WORD">WORD</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="submit" name="EXPORT" value="EXPORT" class="btn btn-primary" formtarget="_blank" style="margin-top:24px; width: 100%" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="box-footer">
-                            <div class="col-md-5">
-                            </div>
-                            <div class="col-md-3">
-                                <select class="pull-right" style="color:#ffffff; background-color:#dd4b39;height:34px;font-size:15px;width:100%;" name="ReportType" id="ReportType">
-                                    <option value="PDF">PDF</option>
-                                    <option value="EXCEL">EXCEL</option>
-                                    <option value="WORD">WORD</option>
-                                </select>
-                            </div>
-                            <div class="col-md-3">
-                                <input type="submit" name="EXPORT" value="EXPORT" class="btn btn-success pull-right" style="width:100%" formtarget="_blank" />
-                            </div>
-                            <div class="col-md-1">
-                            </div>
-                        </div>
-
+                        <div class="box-footer"></div>
                     </div>
                 </div>
             }
@@ -91,32 +93,32 @@
 
         });
 
-         // Get project list by project type id
-     function GetProjectListByProjectTypeId() {
-                var getProjectTypeId = $("#projectTypeId option:selected");
-                var showProjectList = $("#ddlCostCenterId");
+        // Get project list by project type id
+        function GetProjectListByProjectTypeId() {
+            var getProjectTypeId = $("#projectTypeId option:selected");
+            var showProjectList = $("#ddlCostCenterId");
 
-                $.ajax({
-                    type: "GET",
-                    url: "/BillRequisition/GetProjectList",
-                    dataType: "json",
-                    data: { id: getProjectTypeId.val() },
-                    success: function (data) {
-                        showProjectList.empty();
-                        showProjectList.append("<option selected disabled>==Select Project==</option>");
+            $.ajax({
+                type: "GET",
+                url: "/BillRequisition/GetProjectList",
+                dataType: "json",
+                data: { id: getProjectTypeId.val() },
+                success: function (data) {
+                    showProjectList.empty();
+                    showProjectList.append("<option selected disabled>==Select Project==</option>");
 
-                        $.each(data, function (index, item) {
-                            showProjectList.append($('<option>', {
-                                value: item.CostCenterId,
-                                text: item.Name
-                            }));
-                        });
-                    }
-                });
+                    $.each(data, function (index, item) {
+                        showProjectList.append($('<option>', {
+                            value: item.CostCenterId,
+                            text: item.Name
+                        }));
+                    });
+                }
+            });
         };
 
 
-          
+
     </script>
 }
 
